package com.performance.config;

public class Config {
    public static final String BASE_URL = "https://example-react-app.com";
    public static final String LOGIN_URL = BASE_URL + "/login";
    public static final String DASHBOARD_URL = BASE_URL + "/dashboard";
}
